background image added based weather

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root{
+    --primary-clr: #5598fd;
+}
 *{
     margin: 0;
     padding: 0;
@@ -12,6 +15,12 @@ body{
     min-height: 100vh;
     min-width: 100px;
     background: var(--primary--clr);
+    padding: 20px;
+    transition: background-image 0.2s ease;
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
+    url("https://i.ibb.co/WGry01m/cd.jpg");
+    background-size: cover;
+    background-position: center;
 
 }
 img {
